--- a/src/containers/ReleaseTile/index.css
+++ b/src/containers/ReleaseTile/index.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
-  font-size: 3vmin;
+  font-size: 2vmin;
   font-family: 'Karla', sans-serif;
   border-bottom: solid #ffcebe; 
 }
@@ -90,7 +90,7 @@
   margin: 3vh;
   margin-left: 0;
   margin-bottom: 5vh;
-  font-size: 2vmin;
+  font-size: 1.5vmin;
 }
 
 .releaseTile .mediaPlayer {
